# MemMachine

./: .dockerignore  .gitignore  AGENTS.MD  AGENTS.md  CNAME  CONTRIBUTING-CORE.md  CONTRIBUTING-DOCS.md  CONTRIBUTING.md  DOCKER_COMPOSE_README.md  DOCKER_README.md  Dockerfile  Dockerfile.daemon  LICENSE  README.md  SECURITY.md  STYLE_GUIDE.md  USAGE.md  alembic.ini  build-docker.sh  build_pip_pkg_client.sh  build_pip_pkg_server.sh  docker-compose.yml  dropbox.sh  memmachine-compose-daemon.py  memmachine-compose-daemon.sh  memmachine-compose-start.sh  memmachine-compose-stop.sh  memmachine-compose.sh  memmachine-dropbox.py  mkdocs.yml  oauth.sh  pull-qwen.sh  pyproject-client.toml  pyproject-server.toml  pyproject.toml  start-docker.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_issue.yml  feature_request.yml  question.yml
.github/workflows/: build-python.yml  check-uvlockfile.yml  docker-image.yml  docs-checks.yml  installation-test.yml  lint.yml  mypy.yml  pypi-publish.yml  pytest-integration.yml  pytest-rest-client-integration.yml  pytest.yml  ruff-lint.yml  ruff.yaml  sbom.yml  signed-commits.yml  test-python-client-package.yml  test-server-package.yml  ts-client-publish.yml  ts-client-test.yml
boxproxy/: Dockerfile  boxproxy.py
boxsync/: Dockerfile  boxsync.py
docs/: docs.json  index.md  openapi.json  platform.openapi.json
docs/api_reference/: intro.mdx  mcp.mdx
docs/api_reference/python/: client.mdx  client_api.mdx  episodic_memory.mdx  episodic_memory_manager.mdx  memory_api.mdx  memory_types.mdx  profile_memory.mdx  project_api.mdx  server.mdx
docs/api_reference/ts-rest/: typescript.mdx
docs/examples/: GPTStore.mdx  claude_code_mcp.mdx  introduction.mdx  mcp.mdx  python.mdx  rest.mdx
docs/getting_started/: benchmarks.mdx  faqs.mdx  install_guide.mdx  introduction.mdx  quickstart.mdx
docs/install_guide/: configure_wizard.mdx  install_guide.mdx  introduction.mdx
docs/install_guide/cloud_deploy/: aws_cloudformation.mdx
docs/install_guide/config/: aws_bedrock.mdx  ollama.mdx
docs/install_guide/integrate/: GPTStore.mdx  Google_ADK.mdx  LangGraph.mdx  claude_code_mcp.mdx  crewai.mdx  dify.mdx
docs/open_source/: community.mdx  configuration.mdx  databases.mdx  features.mdx  introduction.mdx  memory_types.mdx
docs/platform/: api_key.mdx  dashboard.mdx  introduction.mdx  login_register.mdx
docs/tools/: generate_openapi.py  generate_unified_openapi.py  openapi.json
evaluation/: README.md  locomo_config.yaml  locomo_ingest.py  locomo_search.py
evaluation/locomo/episodic_agent/: __init__.py  cfg.yml  evals.py  generate_scores.py  llm_judge.py  locomo_agent.py  locomo_delete.py  locomo_ingest.py  memmachine_locomo.py  restapiv2_locomo_search_agent.py  run_experiments.py
evaluation/locomo/episodic_memory/: README.md  llm_judge.py  locomo_config.yaml  locomo_delete.py  locomo_evaluate.py  locomo_ingest.py  locomo_search.py  restapiv2_locomo_ingest.py  restapiv2_locomo_search.py
evaluation/locomo/episodic_profile_agent/: README.md  locomo_agent.py  locomo_delete.py  memmachine_locomo.py  run_experiments.py
evaluation/locomo/utils/: memmachine_helper_base.py  memmachine_helper_db.py  memmachine_helper_restapiv2.py
examples/: MemMachine_V2_Complete_Guide.ipynb  README.md  base_query_constructor.py  default_query_constructor.py  example_server.py  memmachine_client_demo.py
examples/crm/: README.md  crm_server.py  query_constructor.py  slack_server.py  slack_service.py
examples/financial_analyst/: financial_server.py  query_constructor.py
examples/frontend/: app.py  gateway_client.py  llm.py  model_config.py
examples/health_assistant/: health_server.py  query_constructor.py
examples/langgraph/: demo.py  tool.py
examples/llamaindex/: example.py  guide.md  mem_machine_memory.py
examples/openai_agent/: README.md  example.py
examples/qwen_agent/: README.md  qwen_agent_example.py
examples/simple_chatbot/: README.md  __init__.py  app.py  gateway_client.py  llm.py  model_config.py  requirements.txt  styles.css
examples/ts_rest_client_demo/: .gitignore  .prettierrc  README.md  package.json  tsconfig.json
examples/ts_rest_client_demo/src/: basic.ts  index.ts
examples/v1/: base_query_constructor.py
examples/v1/crm/: query_constructor.py  slack_service.py
examples/v1/financial_analyst/: query_constructor.py
examples/v1/frontend/: gateway_client.py  llm.py
examples/v1/health_assistant/: health_server.py
examples/v1/writing_assistant/: query_constructor.py  writing_assistant_server.py
examples/writing_assistant/: query_constructor.py  writing_assistant_server.py
integrations/aws_strands_agent_sdk/: README.md  __init__.py  example.py  strands_tools.py  tool.py
integrations/crewai/: README.md  __init__.py  example.py  test_integration.py  tool.py
integrations/dify/: README.md
integrations/fastgpt/: README.md
integrations/langchain/: README.md  __init__.py  example.py  memory.py  test_memory.py
integrations/langgraph/: README.md  __init__.py  demo.py  tool.py
integrations/llamaindex/: __init__.py  example.py  mem_machine_memory.py
integrations/n8n/: README.md
issues/: 13
maintainers/: BUILD_PIP_PACKAGES.md  README.md  build-pip-packages.md  pull-requests.md  running-unit-tests.md
sample/: episodic_memory_config.sample  server_config.sample
sample_configs/: env.dockercompose  episodic_memory_config.cpu.sample  episodic_memory_config.gpu.sample  episodic_memory_config.sample
src/memmachine/: __init__.py
src/server/: app.py
test/: test_session_manager.py
tests/data/: longmemeval_snippet.json
tests/memmachine/: conftest.py
tools/: simple_doc_gen.py
tools/chatgpt2memmachine/: migration.py  openai_summary.py  process_chat_history.py  restcli.py  restcli_test_trace.py
tools/migration/: dump_episodes_v0_1_x.py
(+319 files in other folders)
